--- a/10_Frontend Fundamental/praktikum/style.css
+++ b/10_Frontend Fundamental/praktikum/style.css
@@ -1,20 +1,20 @@
 @media only screen and (min-width: 960px) {
     body{
-        display: flexbox;
+        display: flex;
         flex-wrap: wrap;
     }
 }
 
 @media only screen and (min-device-width: 959px) and (max-device-width: 600px) { 
     body{
-        display: flexbox;
+        display: flex;
         flex-wrap: wrap;
     }
 }
 
 @media only screen and (max-device-width: 599px) {
     body{
-        display: flexbox;
+        display: flex;
         flex-wrap: wrap;
     }
 }
