--- a/10_Frontend Fundamental/praktikum/style.css
+++ b/10_Frontend Fundamental/praktikum/style.css
@@ -1,61 +1,75 @@
-@media only screen and (min-width: 960px) {
-    body{
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
-
-@media only screen and (min-device-width: 959px) and (max-device-width: 600px) { 
-    body{
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
-
-@media only screen and (max-device-width: 599px) {
-    body{
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
-
-.red{
-    background-color: red;
-    width: 292px;
-    height: 30px;
- }
-
-.green{
-    background-color: green;
-    width: 292px;
-    height: 30px;
- }
-
-.blue{
-    background-color: blue;
-    width: 292px;
-    height: 30px;
- }
-
-.yellow{
-    background-color: yellow;
-    width: 292px;
-    height: 30px;
- }
-
-.purple{
-    background-color: purple;
-    width: 292px;
-    height: 30px;
- }
-
-.grey{
-    background-color: gray;
-    width: 292px;
-    height: 30px;
-}
-
-.flex-container {
+.wrapper {
     display: flex;
-    flex-wrap: wrap;
   }
+  
+  .box1 {
+    width: 100%;
+    height: 40px;
+    background: red;
+  }
+  
+  .box2 {
+    width: 100%;
+    height: 40px;
+    background: green;
+  }
+  
+  .box3 {
+    width: 100%;
+    height: 40px;
+    background: blue;
+  }
+  
+  .box4 {
+    width: 100%;
+    height: 40px;
+    background: yellow;
+  }
+  
+  .box5 {
+    width: 100%;
+    height: 40px;
+    background: purple;
+  }
+  
+  .box6 {
+    width: 100%;
+    height: 40px;
+    background: grey;
+  }
+  
+  @media screen and (max-width: 600px) {
+    .wrapper {
+      width: 50%;
+      height: auto;
+      flex-direction: column;
+    }
+  }
+  
+  @media screen and (min-width: 601px) {
+    .wrapper {
+      width: 75%;
+      height: auto;
+      flex-wrap: wrap;
+    }
+  
+    .box {
+      flex-grow: 2;
+      height: 50px;
+      width: calc(100% * (3 / 6) - 2px);
+    }
+  }
+  
+  @media screen and (min-width: 960px) {
+    .wrapper {
+      width: 75%;
+      height: auto;
+    }
+  
+    .box {
+      flex-grow: 2;
+      height: 50px;
+      width: calc(100% * (2 / 6) - 2px);
+    }
+  }
+  
